4/24/25

- Add modal with randomized gifs
- Complete step 5c, 5f
- Make image elements and text responsive
- Reduce hr width and change color
- Complete step 4, 5e
- Add extras step in pseudocode
- Add project card colored border
- Add sidebar link hover colors
- Reduce trending user padding
- Complete step 5a, 5d
- Add link styling to trending users and card svg icons
- Change user large and small icon
- Align trending usernames and blurbs with icons
- Add trending user icons and basic styling
- Remove unused svg icon files
- Add svg icon project class styling
- Add svg icons to project card
- Add svg icon sidebar class styling
- Add svg icons to sidebar links
- Add css commenting
- Add user icons and svg icons
- Add step 5

4/23/25

- Complete step 2d2, 3
- Create and adjust font style classes
- Fix scrollbar showing when no visible content is below cards
- Set up project card grid
- Create project-grid container 
- Complete step 2d, 2d3, 2d4, 2d5
- Add box shadows to cards
- Create dummy text for projects, announcements, and trending
- Add project, announcements, and trending cards and basic header text styling
- Add project, announcements, and trending padding
- Complete step 2c
- Adjust button positioning
- Add user small icon and text
- Adjust positioning on sidebar content
- Align user icon and greeting
- Complete steps 4c, 4d, 4e, 4f
- Add and style header buttons
- Add usericon image
- Style searchbar, header, and sidebar
- Adjust header grid for better row sizing
- Replace search placeholder with text input
- Add steps 4a2, 4a3, 4a4, 4a5, 4a6, 4a7
- Complete step 2b
- Add padding to sidebar links
- Clarify step 4; move some items from step 2 to step 4
- Complete step 4b
- Add fonts
- Add dummy links to nav and setting text
- Replace navigation placeholder text with nav and setting list
- Add user-info-lg, rename user info to user-info-sm
- Remove header and main content placeholder text
- Add pseudocode steps 3b, 4c, 4d, 4e

4/22/25
