@@ -51,8 +51,8 @@
 .sidebar {
     background-color: #B99C71;
     grid-row: 1 / 3;
-    display: grid;
-    grid-template-rows: auto 1fr; 
+    display: flex;
+    flex-direction: column;
 }
 
 /* dashboard branding and logo */
@@ -86,6 +86,10 @@ li {
     padding: 1vh;
 }
 
+.side-links {
+    display: flex; 
+}
+
 .side-links:link,
 .side-links:visited,
 .side-links:active {
@@ -107,10 +111,11 @@ li {
         hue-rotate(39deg) 
         brightness(118%) 
         contrast(99%);
-    height: 2.5vh;
-    width: auto;
-    margin-right: 15px;
-    margin-left: 15px;
+        height: 2.5vh;
+        width: auto;
+        margin-right: 15px;
+        margin-left: 15px;
+        vertical-align: text-top;
 }
 
 a:hover .link-icons {
@@ -392,22 +397,22 @@ p {
     color: #525252;
 }
 
-/* The Modal (background) */
+/* modal background */
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
+  display: none; 
+  position: fixed; 
+  z-index: 1; 
+  padding-top: 100px; 
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.4); 
 }
 
-/* Modal Content */
+/* modal content */
 .modal-content {
   background-color: #fefefe;
   margin: auto;
@@ -416,7 +421,7 @@ p {
   width: 80%;
 }
 
-/* The Close Button */
+/* close button */
 .close {
   color: #aaaaaa;
   float: right;
@@ -432,7 +437,7 @@ p {
 }
 
 .modal-image {
-    width: 400px; /* or any size you prefer */
+    width: 400px;
     max-width: 90%;
     height: auto;
     border-radius: 10px;
