@@ -144,9 +144,9 @@
         </div>
     </div>
     <script>
-        var modal = document.getElementById("myModal");
-        var btn = document.getElementById("popup");
-        var span = document.getElementsByClassName("close")[0];
+        let modal = document.getElementById("myModal");
+        let btn = document.getElementById("popup");
+        let span = document.getElementsByClassName("close")[0];
     
         btn.onclick = function() {
             modal.style.display = "block";
